--- a/css/styles.css
+++ b/css/styles.css
@@ -26728,3 +26728,17 @@ html {
         line-height: 2.5rem;
     }
 }
+
+.accordion-button {
+    height: 20vh;
+    background-color: rgba(26, 188, 156, 0.9);
+    color: white;
+    text-align: center;
+    font-family: sans-serif;
+    font-size: 32px;
+    font-weight: 600;
+}
+
+.accordion-header {
+    margin: 50px 100px;
+}
