--- a/css/styles.css
+++ b/css/styles.css
@@ -17919,7 +17919,7 @@ fieldset:disabled .btn {
 .accordion-item {
     color: var(--bs-accordion-color);
     background-color: var(--bs-accordion-bg);
-    border: var(--bs-accordion-border-width) solid var(--bs-accordion-border-color);
+    border: #241E1C;
 }
 
 .accordion-item:first-of-type {
@@ -22051,7 +22051,7 @@ fieldset:disabled .btn {
 
 .text-secondary {
     --bs-text-opacity: 1;
-    color: #a73439 !important;
+    color: #ea6852 !important;
 }
 
 .text-success {
@@ -26729,9 +26729,39 @@ html {
     }
 }
 
-.accordion-button {
-    height: 20vh;
-    background-color: rgba(26, 188, 156, 0.9);
+#accordionIndustrial .accordion-button {
+    height: 10vh;
+    background-color: #57b6b2;
+    color: white;
+    text-align: center;
+    font-family: sans-serif;
+    font-size: 32px;
+    font-weight: 600;
+}
+
+#accordionGrafico .accordion-button {
+    height: 10vh;
+    background-color: #a5c5ed;
+    color: white;
+    text-align: center;
+    font-family: sans-serif;
+    font-size: 32px;
+    font-weight: 600;
+}
+
+#accordionFotografia .accordion-button {
+    height: 10vh;
+    background-color: #ffc844;
+    color: white;
+    text-align: center;
+    font-family: sans-serif;
+    font-size: 32px;
+    font-weight: 600;
+}
+
+#accordionIdentidad .accordion-button {
+    height: 10vh;
+    background-color: #ea6852;
     color: white;
     text-align: center;
     font-family: sans-serif;
@@ -26796,6 +26826,8 @@ header {
     color: #c0c0c0 !important;
 }
 
-main {
+main,
+body,
+.accordion-item {
     background-color: #241E1C !important;
 }
