--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -36,3 +36,9 @@ a:hover {
     margin-top: 50px;
     font-size: 0.8em;
 }
+
+@media (max-width: 700px) {
+    .modal-dialog.modal-xl {
+        margin: 2rem;
+    }
+}
